Add palindrome and digit sum problems
Added a markdown cell and code for checking if a number is a palindrome, implemented a solution for sum of digits for multiple test cases, and included a function for calculating the digital root. These additions expand the notebook with new problem-solving examples.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -251,20 +251,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e8133fb-101b-4753-a251-7e556bb03671",
+   "cell_type": "markdown",
+   "id": "03d80f1e-9a54-4f3d-a6ba-46e49593a188",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Is Palindrome\n",
+    "You're given a number N. Check if the number N is palindrome or not. Print YES if it's a palindrome, otherwise print NO."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a2a81197-570a-4002-baad-f9c90238b786",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1221\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = str(input())\n",
+    "if n == n[::-1]: print(\"YES\")\n",
+    "else: print(\"NO\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -477,6 +497,146 @@
     "        print(\"yes\")\n",
     "    else:\n",
     "        print(\"no\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ce2961f-2904-4c5f-8a03-0e18f3ce5857",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56afe915-f672-461e-aa73-ec7874b35d68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52c6c9db-c2eb-4f9e-82f1-27487c882953",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a6c49dc-025a-4ceb-8dc9-516f76c157b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89daa3e6-00bb-46bb-a7ce-dde2e5953e05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "180c1bea-6859-414d-aa2b-ad8318be9643",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d967077-3883-4ef2-9227-b6eadf928252",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2551243-3aea-4e00-9449-172ffe345314",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27caa13f-07a5-4655-b954-95623b000916",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e505ab5f-ab24-4048-b178-2175e971097c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d61e8d16-ae32-4e4b-ab81-f5d304e9cddc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = int(input())  # Sum of Digits\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N = int(input())\n",
+    "    digit_sum = sum(int(d) for d in str(N))  # Sum of digits\n",
+    "    print(digit_sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae529cc-6af7-4b77-99d8-86efef3a6928",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd631d6-ec2d-40fe-8a9b-8f7b77251ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4569cfde-779f-428d-b7ce-4aaacf242417",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5aed84e-d0df-4dbd-9d43-2b1cae1f42ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63a05c40-0f04-410f-a488-9f13fe1f756d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_digits(num): # Digital Root \n",
+    "    if num == 0:\n",
+    "        return 0\n",
+    "    return 9 if num % 9 == 0 else num % 9\n"
    ]
   }
  ],
