Add Cats and Dogs problem statement and solutions
Added a markdown cell describing the 'Cats and Dogs' problem. Implemented two code cells with solutions to validate the possible number of legs counted, including input/output examples and logic for minimum and maximum leg calculations.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -287,20 +287,79 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3eab509b-d697-42d2-a3a4-4b58b365abf5",
+   "cell_type": "markdown",
+   "id": "83028118-c7cf-4d2d-88f7-db7f43d772fd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Cats and Dogs\n",
+    "Chef is a farmer and a pet lover. He has a lot of his favorite pets, cats and dogs, in the barn. He knows that there are C cats and \n",
+    "D dogs in the barn. Also, one day went to the field and found that there were L legs of the animals touching the ground. Chef knows that cats love to ride on the dogs. So, they might ride on the dogs, and their legs won't touch the ground, and Chef would miss counting their legs. Chef's dogs are strong enough to ride at max two cats on their back.\n",
+    "\n",
+    "It was a cold foggy morning, when Chef did this counting. So he is now wondering whether he counted the legs properly or not. Specifically, he is wondering whether it is possible that he counted correctly. Please help Chef in finding it."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "599013cc-7441-4c87-a351-3b2842a35b7c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n",
+      " 1 1 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1 1 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1 1 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    C, D, L = map(int, input().split())\n",
+    "    max_legs = 4 * (C + D)\n",
+    "    min_legs = 4 * (D + max(0, C - 2 * D))\n",
+    "    if L % 4 ==0 and min_legs <= L <= max_legs:\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -372,7 +431,23 @@
    "id": "d701cf3c-4e01-4972-a742-d85f33a48ad7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# cats and Dogs\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    C, D, L = map(int, input().split())\n",
+    "\n",
+    "    # Calculate maximum and minimum possible leg counts\n",
+    "    max_legs = 4 * (C + D)\n",
+    "    min_legs = 4 * (D + max(0, C - 2 * D))\n",
+    "\n",
+    "    # Check validity\n",
+    "    if L % 4 == 0 and min_legs <= L <= max_legs:\n",
+    "        print(\"yes\")\n",
+    "    else:\n",
+    "        print(\"no\")\n"
+   ]
   },
   {
    "cell_type": "code",
