Add HCF and LCM solutions and array pairing logic
Added multiple code cells for finding HCF and LCM using both built-in and custom functions. Introduced a solution for pairing elements from two arrays to ensure all sums are distinct. Removed duplicate and unused code cells related to the 'cats and dogs' problem.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -362,12 +362,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca21c96b-d8f2-4bcb-ae5c-8db54a4a5d93",
+   "cell_type": "markdown",
+   "id": "d7ca72e8-13de-4958-a93a-7b137fd1eb48",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## HCF and LCM \n",
+    "You are given two integers, a and b. Find the HCF (also known as GCD) and LCM of these two numbers and print them in a new line."
+   ]
   },
   {
    "cell_type": "code",
@@ -375,7 +376,17 @@
    "id": "d7af19ee-56ae-46cc-b948-f511d9184699",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Using Built-In Math Functions\n",
+    "import math\n",
+    "\n",
+    "a, b = map(int, input().split())\n",
+    "\n",
+    "hcf = math.gcd(a, b)\n",
+    "lcm = (a * b) // hcf\n",
+    "\n",
+    "print(lcm, hcf)"
+   ]
   },
   {
    "cell_type": "code",
@@ -383,7 +394,21 @@
    "id": "a4939eec-5e76-4fed-b824-ad64900f3cce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Without Math Function and declaring self hcf function\n",
+    "def compute_hcf(a, b):\n",
+    "    while b != 0:\n",
+    "        a, b = b, a % b\n",
+    "    return a\n",
+    "    \n",
+    "a, b = map(int, input().split())\n",
+    "\n",
+    "hcf = compute_hcf(a, b)\n",
+    "\n",
+    "lcm = (a * b) // hcf\n",
+    "\n",
+    "print(hcf, lcm)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -431,23 +456,7 @@
    "id": "d701cf3c-4e01-4972-a742-d85f33a48ad7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# cats and Dogs\n",
-    "T = int(input())\n",
-    "\n",
-    "for _ in range(T):\n",
-    "    C, D, L = map(int, input().split())\n",
-    "\n",
-    "    # Calculate maximum and minimum possible leg counts\n",
-    "    max_legs = 4 * (C + D)\n",
-    "    min_legs = 4 * (D + max(0, C - 2 * D))\n",
-    "\n",
-    "    # Check validity\n",
-    "    if L % 4 == 0 and min_legs <= L <= max_legs:\n",
-    "        print(\"yes\")\n",
-    "    else:\n",
-    "        print(\"no\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -455,7 +464,21 @@
    "id": "47c39edc-15eb-469d-b864-6c56105b23fe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "# Read input\n",
+    "a, b = map(int, input().split())\n",
+    "\n",
+    "# Calculate HCF (GCD)\n",
+    "hcf = math.gcd(a, b)\n",
+    "\n",
+    "# Calculate LCM using the formula: LCM = (a * b) // HCF\n",
+    "lcm = (a * b) // hcf\n",
+    "\n",
+    "# Output\n",
+    "print(hcf, lcm)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -556,23 +579,7 @@
    "id": "bd4530cf-79fb-4f10-8fdb-201a4e6b8084",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# cats and Dogs\n",
-    "T = int(input())\n",
-    "\n",
-    "for _ in range(T):\n",
-    "    C, D, L = map(int, input().split())\n",
-    "\n",
-    "    # Calculate maximum and minimum possible leg counts\n",
-    "    max_legs = 4 * (C + D)\n",
-    "    min_legs = 4 * (D + max(0, C - 2 * D))\n",
-    "\n",
-    "    # Check validity\n",
-    "    if L % 4 == 0 and min_legs <= L <= max_legs:\n",
-    "        print(\"yes\")\n",
-    "    else:\n",
-    "        print(\"no\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -712,6 +719,64 @@
     "    if num == 0:\n",
     "        return 0\n",
     "    return 9 if num % 9 == 0 else num % 9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a542c21e-6aa1-4379-8971-d769f0af0c05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bebf6c44-02ff-40af-a706-efb53b1e6ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d38d7d25-7013-46a6-b173-ab9f401649d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bfe3c6f-8d72-411d-8278-14bdae0b629b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de54cc46-f0bb-4ee5-a6b8-41696c2d9ae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read inputs\n",
+    "N, M = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "B = list(map(int, input().split()))\n",
+    "\n",
+    "# Find the index of the smallest element in A\n",
+    "minA_idx = A.index(min(A))\n",
+    "maxB_idx = B.index(max(B))  # To ensure all sums are distinct\n",
+    "\n",
+    "# Output M pairs: A[minA_idx] with every B[j]\n",
+    "for j in range(M):\n",
+    "    print(minA_idx, j)\n",
+    "\n",
+    "# Output N - 1 pairs: each A[i] (except minA_idx) with B[maxB_idx]\n",
+    "for i in range(N):\n",
+    "    if i != minA_idx:\n",
+    "        print(i, maxB_idx)\n"
    ]
   }
  ],
