Add new code cells and hardest problem solution
Added several empty code cells for future use and implemented a solution for the 'Hardest problem bet' task. Also updated comments for clarity in the distinct pairs problem cell.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -464,21 +464,39 @@
    "id": "47c39edc-15eb-469d-b864-6c56105b23fe",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import math\n",
-    "\n",
-    "# Read input\n",
-    "a, b = map(int, input().split())\n",
-    "\n",
-    "# Calculate HCF (GCD)\n",
-    "hcf = math.gcd(a, b)\n",
-    "\n",
-    "# Calculate LCM using the formula: LCM = (a * b) // HCF\n",
-    "lcm = (a * b) // hcf\n",
-    "\n",
-    "# Output\n",
-    "print(hcf, lcm)\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ef7551-0091-4de9-8f88-94522d1f21b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bef7eeb-b555-419b-84a3-72bb70a76215",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bb428ad-5655-483a-bdbf-a22140e4c09c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0af3db34-2845-4079-a4e0-73f00332d2e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -760,7 +778,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read inputs\n",
+    "# Read inputs # Distinct Pairs\n",
     "N, M = map(int, input().split())\n",
     "A = list(map(int, input().split()))\n",
     "B = list(map(int, input().split()))\n",
@@ -777,6 +795,62 @@
     "for i in range(N):\n",
     "    if i != minA_idx:\n",
     "        print(i, maxB_idx)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cbba13d-878d-4ee0-91c0-9992250e77a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b94c44d4-a27a-48c5-8201-d3d6c25e29a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f665c55-0f4e-45e1-89e9-ba31a01022c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b62a8bd4-6bfc-4ea7-b55d-e90770d739fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = int(input()) # Hardest probelm bet\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    SA, SB, SC = map(int, input().split())\n",
+    "    \n",
+    "    max_score = max(SA, SB, SC)\n",
+    "    count = 0\n",
+    "    winner = \"\"\n",
+    "\n",
+    "    if SA == max_score:\n",
+    "        count += 1\n",
+    "        winner = \"A\"\n",
+    "    if SB == max_score:\n",
+    "        count += 1\n",
+    "        winner = \"B\"\n",
+    "    if SC == max_score:\n",
+    "        count += 1\n",
+    "        winner = \"C\"\n",
+    "\n",
+    "    if count == 1:\n",
+    "        print(winner)\n",
+    "    else:\n",
+    "        print(\"Draw\")\n"
    ]
   }
  ],
