Add Full Barrier Alchemist problem and solution
Added a markdown cell describing the Full Barrier Alchemist problem and implemented a new code cell with a solution. Removed the previous solution code for clarity and replaced it with the updated logic.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -411,20 +411,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "006413d6-3693-4e9c-849b-0ac76cd44101",
+   "cell_type": "markdown",
+   "id": "3411dbad-c36c-4087-a526-7a88247e6656",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##  Full Barrier Alchemist\n",
+    "Edward Elric is chasing after Scar. To stop Edward, Scar creates N barriers in the way, numbered from 1 to N. Each barrier Scar created is either one of the following two types.\n",
+    "\n",
+    "1. Type 1 barrier - This barrier starts from a height X above the ground and extends till the sky.\n",
+    "2. Type 2 barrier - This barrier starts from the ground and extends up to height X above the ground.\n",
+    "\n",
+    "The height of Edward is H units and he has an alchemic life force of L units. Moreover, he can duck by Y1 units and jump by height Y2 units (as explained in the figures). He starts crossing barriers in sequence, starting from barrier 1 till the barrier N. Whenever he can't pass a barrier by ducking or jumping (considered passed even when the barrier just touches him), he uses Alchemy to break the barrier. However, this costs him a single unit of his alchemic life force.\n",
+    "\n",
+    "If after breaking a barrier no life force is left, Edward gets completely exhausted, unable to pass that barrier.\n",
+    "How many barriers can Edward cross?\n",
+    "\n",
+    "And remember never to call him a pipsqueak if his height is too short!"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16437828-f861-454b-a4d9-ef354a603ec8",
+   "id": "91ba0b07-f10a-4a96-8446-962038c3ce98",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    N, H, Y1, Y2, L = map(int, input().split())\n",
+    "    \n",
+    "    barriers_passed = 0\n",
+    "    \n",
+    "    for i in range(N):\n",
+    "        t, X = map(int, input().split())\n",
+    "        \n",
+    "        if t == 1 and H - Y1 > X:\n",
+    "            L -= 1\n",
+    "            \n",
+    "        elif t == 2 and Y2 < X:\n",
+    "            L -= 1\n",
+    "                \n",
+    "        if L > 0:\n",
+    "          barriers_passed += 1\n",
+    "            \n",
+    "    print(barriers_passed)"
+   ]
   },
   {
    "cell_type": "code",
@@ -528,36 +560,7 @@
    "id": "5b53b348-c6e7-4520-b108-ffb18b4050e3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "T = int(input())  # Full barrier Alchemy\n",
-    "\n",
-    "for _ in range(T):\n",
-    "    N, H, Y1, Y2, L = map(int, input().split())\n",
-    "\n",
-    "    count = 0  # Number of barriers passed\n",
-    "\n",
-    "    for _ in range(N):\n",
-    "        t, X = map(int, input().split())\n",
-    "\n",
-    "        if t == 1:\n",
-    "            if X < Y1:\n",
-    "                count += 1\n",
-    "            else:\n",
-    "                L -= 1\n",
-    "                if L == 0:\n",
-    "                    break\n",
-    "                count += 1\n",
-    "        elif t == 2:\n",
-    "            if X > Y2:\n",
-    "                count += 1\n",
-    "            else:\n",
-    "                L -= 1\n",
-    "                if L == 0:\n",
-    "                    break\n",
-    "                count += 1\n",
-    "\n",
-    "    print(count)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
