Add solutions for Hardest Problem Bet
Added two code cells implementing logic for the 'Hardest Problem Bet' problem. One cell determines the winner based on the lowest score, and another based on the highest score, printing the winner or 'Draw' accordingly. Also added a markdown header for clarity.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -453,12 +453,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7348859-3ff9-4455-8f5a-30d0d21c947c",
+   "cell_type": "markdown",
+   "id": "33230b47-a542-42e2-a15f-bf487b8b04c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Hardest Problem Bet "
+   ]
   },
   {
    "cell_type": "code",
@@ -466,7 +466,19 @@
    "id": "9835bc02-d83c-4608-93c0-198275f4be14",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    SA, SB, SC = map(int, input().split())\n",
+    "\n",
+    "    if SC < SA and SC < SB:\n",
+    "        print(\"Alice\")\n",
+    "    elif SB < SA and SB < SC:\n",
+    "        print(\"Bob\")\n",
+    "    else:\n",
+    "        print(\"Draw\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -546,7 +558,31 @@
    "id": "2ba3c97a-7de4-4581-87da-c1d8fb2cfea8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "T = int(input()) # Hardest probelm bet\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    SA, SB, SC = map(int, input().split())\n",
+    "    \n",
+    "    max_score = max(SA, SB, SC)\n",
+    "    count = 0\n",
+    "    winner = \"\"\n",
+    "\n",
+    "    if SA == max_score:\n",
+    "        count += 1\n",
+    "        winner = \"A\"\n",
+    "    if SB == max_score:\n",
+    "        count += 1\n",
+    "        winner = \"B\"\n",
+    "    if SC == max_score:\n",
+    "        count += 1\n",
+    "        winner = \"C\"\n",
+    "\n",
+    "    if count == 1:\n",
+    "        print(winner)\n",
+    "    else:\n",
+    "        print(\"Draw\")\n"
+   ]
   },
   {
    "cell_type": "code",
