Implement solution for Distinct Pairs problem
Added code to solve the Distinct Pairs problem by generating pairs between elements of two lists according to specified logic. Also removed unused code cell for the Hardest Problem Bet.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -481,12 +481,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b59a8b09-1995-44d7-8ae0-aad1a91a14ef",
+   "cell_type": "markdown",
+   "id": "821b5051-0f29-49f3-b228-ee540bc443a2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Distinct Pairs "
+   ]
   },
   {
    "cell_type": "code",
@@ -494,7 +494,19 @@
    "id": "d701cf3c-4e01-4972-a742-d85f33a48ad7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# cook your dish here\n",
+    "N, M = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "B = list(map(int, input().split()))\n",
+    "minA_idx = A.index(min(A))\n",
+    "maxB_idx = B.index(max(B))  \n",
+    "for j in range(M):\n",
+    "    print(minA_idx, j)\n",
+    "for i in range(N):\n",
+    "    if i != minA_idx:\n",
+    "        print(i, maxB_idx)"
+   ]
   },
   {
    "cell_type": "code",
@@ -558,31 +570,7 @@
    "id": "2ba3c97a-7de4-4581-87da-c1d8fb2cfea8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "T = int(input()) # Hardest probelm bet\n",
-    "\n",
-    "for _ in range(T):\n",
-    "    SA, SB, SC = map(int, input().split())\n",
-    "    \n",
-    "    max_score = max(SA, SB, SC)\n",
-    "    count = 0\n",
-    "    winner = \"\"\n",
-    "\n",
-    "    if SA == max_score:\n",
-    "        count += 1\n",
-    "        winner = \"A\"\n",
-    "    if SB == max_score:\n",
-    "        count += 1\n",
-    "        winner = \"B\"\n",
-    "    if SC == max_score:\n",
-    "        count += 1\n",
-    "        winner = \"C\"\n",
-    "\n",
-    "    if count == 1:\n",
-    "        print(winner)\n",
-    "    else:\n",
-    "        print(\"Draw\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -598,7 +586,25 @@
    "id": "23c604e9-bead-4403-bee4-fb8388526937",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Read inputs # Distinct Pairs\n",
+    "N, M = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "B = list(map(int, input().split()))\n",
+    "\n",
+    "# Find the index of the smallest element in A\n",
+    "minA_idx = A.index(min(A))\n",
+    "maxB_idx = B.index(max(B))  # To ensure all sums are distinct\n",
+    "\n",
+    "# Output M pairs: A[minA_idx] with every B[j]\n",
+    "for j in range(M):\n",
+    "    print(minA_idx, j)\n",
+    "\n",
+    "# Output N - 1 pairs: each A[i] (except minA_idx) with B[maxB_idx]\n",
+    "for i in range(N):\n",
+    "    if i != minA_idx:\n",
+    "        print(i, maxB_idx)\n"
+   ]
   },
   {
    "cell_type": "code",
