Add alternative solution for array sum problem
Introduced a second logic implementation for generating unique sums from two input arrays and printing index pairs. The new cell provides an alternative approach to the existing solution.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -495,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cook your dish here\n",
+    "# Logic 1\n",
     "N, M = map(int, input().split())\n",
     "A = list(map(int, input().split()))\n",
     "B = list(map(int, input().split()))\n",
@@ -514,7 +514,20 @@
    "id": "47c39edc-15eb-469d-b864-6c56105b23fe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Logic 2\n",
+    "n, m = map(int, input().split())\n",
+    "list1 = list(map(int, input().split()))\n",
+    "list2 = list(map(int, input().split()))\n",
+    "result = set()\n",
+    "for i in range(len(list1)):\n",
+    "    for j in range(len(list2)):\n",
+    "        if list1[i] + list2[j] not in result:\n",
+    "            result.add(list1[i] + list2[j])\n",
+    "            print(i, j)\n",
+    "            if len(result) == (n + m - 1): break\n",
+    "    if len(result) == (n + m - 1): break"
+   ]
   },
   {
    "cell_type": "code",
