Implement add_digits function and update notebook cells
Converted an empty code cell to markdown for the 'Add Digits' section and implemented the add_digits (digital root) function in two code cells. Also removed the code for the 'Distinct Pairs' problem from one cell, possibly for refactoring or replacement.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -530,12 +530,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92ef7551-0091-4de9-8f88-94522d1f21b5",
+   "cell_type": "markdown",
+   "id": "6eb1b980-91f8-46f6-8f1f-7d4b1c66d5d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Add Digits  "
+   ]
   },
   {
    "cell_type": "code",
@@ -543,7 +543,12 @@
    "id": "9bef7eeb-b555-419b-84a3-72bb70a76215",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_digits(num): # Digital Root \n",
+    "    if num == 0:\n",
+    "        return 0\n",
+    "    return 9 if num % 9 == 0 else num % 9"
+   ]
   },
   {
    "cell_type": "code",
@@ -599,25 +604,7 @@
    "id": "23c604e9-bead-4403-bee4-fb8388526937",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Read inputs # Distinct Pairs\n",
-    "N, M = map(int, input().split())\n",
-    "A = list(map(int, input().split()))\n",
-    "B = list(map(int, input().split()))\n",
-    "\n",
-    "# Find the index of the smallest element in A\n",
-    "minA_idx = A.index(min(A))\n",
-    "maxB_idx = B.index(max(B))  # To ensure all sums are distinct\n",
-    "\n",
-    "# Output M pairs: A[minA_idx] with every B[j]\n",
-    "for j in range(M):\n",
-    "    print(minA_idx, j)\n",
-    "\n",
-    "# Output N - 1 pairs: each A[i] (except minA_idx) with B[maxB_idx]\n",
-    "for i in range(N):\n",
-    "    if i != minA_idx:\n",
-    "        print(i, maxB_idx)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -633,7 +620,12 @@
    "id": "12e709ac-9120-43ed-9fd5-1e08ebe70743",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_digits(num): # Digital Root \n",
+    "    if num == 0:\n",
+    "        return 0\n",
+    "    return 9 if num % 9 == 0 else num % 9\n"
+   ]
   },
   {
    "cell_type": "code",
