Add solutions for Piglatin, Krishnamurthy, and Palindrome numbers
Implemented code and markdown explanations for class assignments: Piglatin word generator, Krishnamurthy number checker, and Madam (palindrome) number checker. Removed unused code for digital root calculation.

--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -551,52 +551,148 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bb428ad-5655-483a-bdbf-a22140e4c09c",
+   "cell_type": "markdown",
+   "id": "ed8cb25f-9efb-4c4d-9f3a-469bb35c5a6f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Class Assignment-1: Piglatin Word Generator, Data Encryption\n",
+    "1. Input: transfer one million dollars to the account six two two\n",
+    "2. Output: ransfertp neop illionmp ollarsdp otp hetp ccountap ixsp wotp wotp"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "0af3db34-2845-4079-a4e0-73f00332d2e6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " transfer one million dollars to the account six two two\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ransfertp neop illionmp ollarsdp otp hetp ccountap ixsp wotp wotp\n"
+     ]
+    }
+   ],
+   "source": [
+    "def piglatin_encrypt(word):\n",
+    "    if len(word) == 1:\n",
+    "        return word + 'p'\n",
+    "    \n",
+    "    return word[1:] + word[0] + 'p'\n",
+    "\n",
+    "sentence = input().strip().lower()\n",
+    "words = sentence.split()\n",
+    "\n",
+    "output = [piglatin_encrypt(word) for word in words]\n",
+    "\n",
+    "print(\" \".join(output))\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ce612cd-2153-41d3-8e9d-a6bd9ee3b12c",
+   "cell_type": "markdown",
+   "id": "d710439b-437b-4ff0-9890-2424b9969f0a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Class Assignment-2: Number Theory & Mathematical Problems\n",
+    "1. Krishnamurthy Number\n",
+    "2. 📌 Problem Statement: A number is a Krishnamurthy number if the sum of the factorials of its digits equals the number itself.\n",
+    "3. ✅ Example 1: 145 → (1! + 4! + 5!) = 145\n",
+    "4. ✅ Example 2: 40585 → (4! + 0! + 5! + 8! + 5!) = 40585"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3edcf281-9257-47dd-a316-845fdcb1fc45",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number:  145\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, it's a Krishnamurthy number\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    fact = 1\n",
+    "    for i in range(2, n + 1):\n",
+    "        fact *= i\n",
+    "    return fact\n",
+    "\n",
+    "def is_krishnamurthy(num):\n",
+    "    original = num\n",
+    "    total = 0\n",
+    "    while num > 0:\n",
+    "        digit = num % 10\n",
+    "        total += factorial(digit)\n",
+    "        num //= 10\n",
+    "    return total == original\n",
+    "    \n",
+    "number = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "if is_krishnamurthy(number):\n",
+    "    print(\"Yes, it's a Krishnamurthy number\")\n",
+    "else:\n",
+    "    print(\"No, it's not a Krishnamurthy number\")\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ba3c97a-7de4-4581-87da-c1d8fb2cfea8",
+   "cell_type": "markdown",
+   "id": "87dc747d-215d-4557-bcec-632d7fd6f01d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Class Assignment-3: Madam Number (Palindrome Number)\n",
+    "1. 📌 Problem Statement: A number is a Madam number if it remains the same when reversed.\n",
+    "2. ✅ Example 1: 121 → Reverse = 121 ✅\n",
+    "3. ✅ Example 2: 1331 → Reverse = 1331 ✅"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5b53b348-c6e7-4520-b108-ffb18b4050e3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number 2457\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Madam Number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = str(input(\"Enter a number\"))\n",
+    "\n",
+    "if n == n[::-1]:\n",
+    "    print(\"Is Madam Number\")\n",
+    "else:\n",
+    "    print(\"Not Madam Number\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -620,12 +716,7 @@
    "id": "12e709ac-9120-43ed-9fd5-1e08ebe70743",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def add_digits(num): # Digital Root \n",
-    "    if num == 0:\n",
-    "        return 0\n",
-    "    return 9 if num % 9 == 0 else num % 9\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
