--- a/Problem Solving - Day 2.ipynb
+++ b/Problem Solving - Day 2.ipynb
@@ -696,11 +696,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "23c604e9-bead-4403-bee4-fb8388526937",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (257113975.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[25], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    while (ans <= m)\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(m,n) :\n",
+    "  ans = 1;\n",
+    "  count = 0;\n",
+    "  while (ans <= m) \n",
+    "    count = count + 1;\n",
+    "    ans = ans * n;\n",
+    "  \n",
+    "  return(count)\n",
+    "\n",
+    "f(2000, 3)"
+   ]
   },
   {
    "cell_type": "code",
