Update Problem Solving Day - 3.ipynb

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -168,6 +168,91 @@
    "id": "587546c9-66d0-454f-8390-3e6bbab46657",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "A => 65 => 64 + 1      = 0100 0001\n",
+    "                     xor 0010 0001 (32 = 0x20)\n",
+    "                    -----------------\n",
+    "a => 65 => 64 + 32 + 1 = 0110 0001\n",
+    "                     xor 0010 0001 (32 = 0x20)\n",
+    "                    -----------------\n",
+    "A => 65 => 64 + 1      = 0100 0001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "13767d65-b330-4e00-926d-743fdfc7f6ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A a\n",
+      "a A\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch = \"A\"\n",
+    "print(ch, chr(ord(ch) ^ 0x20))\n",
+    "ch = \"a\"\n",
+    "print(ch, chr(ord(ch) ^ 0x20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "33e167ed-22f7-4322-8dc3-1bceefed2d96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "def caseConversion(ch):   # .lower() also uses this kind of function\n",
+    "    return chr(ord(ch) ^ 0x20)\n",
+    "\n",
+    "mychar = 'a'\n",
+    "print(caseConversion(mychar))\n",
+    "mychar = 'A'\n",
+    "print(caseConversion(mychar))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "55aedb6c-b164-409f-be7c-fc480bb0c74f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65 A\n",
+      "A 65\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydata = 65\n",
+    "print(mydata, chr(mydata))\n",
+    "mydata = \"A\"\n",
+    "print(mydata, ord(mydata))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76cadfae-77ce-404c-8b9b-531fb16663aa",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
