Update Problem Solving Day - 3.ipynb

--- a/Problem Solving Day - 3.ipynb
+++ b/Problem Solving Day - 3.ipynb
@@ -249,8 +249,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "76cadfae-77ce-404c-8b9b-531fb16663aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 is ODD is True\n",
+      "100 is ODD is False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isODD(num):\n",
+    "    return True if (num & 1) else False\n",
+    "\n",
+    "number = 101\n",
+    "print(f\"{number} is ODD is {isODD(number)}\")\n",
+    "number = 100\n",
+    "print(f\"{number} is ODD is {isODD(number)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "77f0af79-a500-4d24-9272-28ea3537daf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101 is EVEN is False\n",
+      "100 is EVEN is True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isEVEN(num):\n",
+    "    return not isODD(num)\n",
+    "\n",
+    "number = 101\n",
+    "print(f\"{number} is EVEN is {isEVEN(number)}\")\n",
+    "\n",
+    "number = 100\n",
+    "print(f\"{number} is EVEN is {isEVEN(number)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5bc28411-e863-4be8-8ded-2dd801b9c62f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bit at 2-th in 25 is 0\n",
+      "Bit at 4-th in 25 is 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the i-th bit form the right in number n\n",
+    "def getBit(n, i):\n",
+    "    mask = 1 << i\n",
+    "    return 1 if (n & mask) else 0\n",
+    "#                    7654 3210\n",
+    "# 25 = 16 + 8 + 1 => 0001 1001\n",
+    "#            1 << 4  0001 0000 &\n",
+    "#                -----------------\n",
+    "#                    0001 0000 != 0 => 1\n",
+    "n = 25\n",
+    "p = 2\n",
+    "print(f\"Bit at {p}-th in {n} is {getBit(n, p)}\")\n",
+    "p = 4\n",
+    "print(f\"Bit at {p}-th in {n} is {getBit(n, p)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85e370c7-2c9f-4098-924f-de9bc83f8773",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28a8b0c9-e0ff-4070-981b-75d09b755486",
    "metadata": {},
    "outputs": [],
    "source": []
